--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,12 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "axios": "0.18.0",
+    "bootstrap": "4.1.1",
+    "font-awesome": "4.7.0",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
